@@ -75,12 +75,13 @@ See the variable `align-rules-list' for more details.")
     (list rails-ruby-command (list "-c" local-file))))
 
 (defun flymake-ruby-load ()
-  (when (string-match
-         (format "\\(%s\\)"
-                 (string-join
-                  "\\|"
-                  (mapcar 'car flymake-allowed-ruby-file-name-masks)))
-         (buffer-file-name))
+  (when (and (buffer-file-name)
+             (string-match
+              (format "\\(%s\\)"
+                      (string-join
+                       "\\|"
+                       (mapcar 'car flymake-allowed-ruby-file-name-masks)))
+              (buffer-file-name)))
     (setq flymake-allowed-file-name-masks (append flymake-allowed-file-name-masks flymake-allowed-ruby-file-name-masks))
     (setq flymake-err-line-patterns (cons flymake-ruby-error-line-pattern-regexp flymake-err-line-patterns))
     (flymake-mode t)
